sort.basic.bubble.AlgBubbleSort1.scala.code

def BubbleSort(){

  var final:Boolean = true

  while (final){
    for (i<- 0 to getNombreValeur()-2){
      if (plusPetit(i,i+1)){
        echange(i,i+1);
        final = true;}
      else { 
        final = false
      }
    }
  }
}
